--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 MONGODB_URL=mongodb+srv://ka19developer:VOjA7e6Ai7JwDU2i@cluster0.bz1cyut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+NEXT_PUBLIC_WEBSITE_NAME=Quick Logo
+NEXT_PUBLIC_WEBSITE_URL=www.quicklogo.com
 
 # VOjA7e6Ai7JwDU2i
 # ka19developer
