--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.365.0",
     "mongoose": "^8.3.4",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-best-gradient-color-picker": "^3.0.7",
