--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 MONGODB_URL=mongodb+srv://ka19developer:VOjA7e6Ai7JwDU2i@cluster0.bz1cyut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_WEBSITE_NAME=Quick Logo
 NEXT_PUBLIC_WEBSITE_URL=www.quicklogo.com
-AUTH_GITHUB_SECRET=aefb74100e12db06c12bf664fede94d3dc2f4e3a
+AUTH_GITHUB_SECRET=542e009b62d664c3e7ba4530d9f265642dbe1119
 AUTH_GITHUB_ID=Ov23liyOnL9FAR9UgAEI
 
-# NEXT_PUBLIC_GOOGLE_CLIENT_ID=Ov23liyOnL9FAR9UgAEI
-# NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=Ov23liyOnL9FAR9UgAEI
+GOOGLE_CLIENT_ID=4233648032-obcqsej8uu9mfids0dslj5b9k5d9p68t.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 AUTH_SECRET=zDx7uAQocWafA3H7XIMqS9Uj1nLfuydF0UUSO5VyQqM=
 
 # VOjA7e6Ai7JwDU2i
