--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
