--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ AUTH_GITHUB_ID=Ov23liyOnL9FAR9UgAEI
 GOOGLE_CLIENT_ID=4233648032-obcqsej8uu9mfids0dslj5b9k5d9p68t.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 AUTH_SECRET=zDx7uAQocWafA3H7XIMqS9Uj1nLfuydF0UUSO5VyQqM=
+GOOGLE_ANALYTICS=G-D3KJV5Y65R
 
 # VOjA7e6Ai7JwDU2i
 # ka19developer
