--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-best-gradient-color-picker": "^3.0.7",
     "react-colorful": "^5.6.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
