--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ NEXT_PUBLIC_WEBSITE_URL=www.quicklogo.com
 AUTH_GITHUB_SECRET=542e009b62d664c3e7ba4530d9f265642dbe1119
 AUTH_GITHUB_ID=Ov23liyOnL9FAR9UgAEI
 
+AUTH_FACEBOOK_SECRET=2ace22d032babd128e96254617c57da8
+AUTH_FACEBOOK_ID=1124152405326071
+
 GOOGLE_CLIENT_ID=4233648032-obcqsej8uu9mfids0dslj5b9k5d9p68t.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 AUTH_SECRET=zDx7uAQocWafA3H7XIMqS9Uj1nLfuydF0UUSO5VyQqM=
