--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "set port=3001 && next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "mongoose": "^8.3.4",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.19",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-best-gradient-color-picker": "^3.0.7",
